[package]
name = "gpt"
version = "3.0.0"
description = "A pure-Rust library to work with GPT partition tables."
documentation = "https://docs.rs/gpt"
authors = ["Chris Ober <obercgit@gmail.com>", "Chris Holcombe <xfactor973@gmail.com>", "Luca Bruno <lucab@debian.org>"]
license = "MIT"
homepage = "https://github.com/Quyzi/gpt"
edition = "2021"
rust-version = "1.60"

[dependencies]
bitflags = "2.0"
crc = "3.0"
log = "0.4.18"
uuid = { version = "1.3.4", features = ["v4"] }
simple-bytes = "0.2.13"

[dev-dependencies]
simplelog = "0.11"
tempfile = "3.0"
